--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Version 11.0 (June 30)
    • Allow the adjustment of bullet indent
    • Support hanging indent
    • Reset indent menu option
+   • Remove tabs (which were redundant with the sidebar and slowed things down)
    • Add "New Window" menu item to easily open a new LangPad instance
    • Paste images directly from File Explorer
    • Show current line in status bar
