--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+Version 11.1 (TBD)
+   **• Frequently used characters tab
+
 Version 11.0 (June 30)
    • Easier resizing of images before insertion
    **• Pressing CTRL+S on character editor and dictionary now saves the notebook
@@ -24,14 +27,14 @@ Version 11.0 (June 30)
    **• Export pages to Markdown
    **• Export dictionary to Markdown
    **• Copy text as Markdown
-   **• Frequently used characters tab
    **• Re-add themes
    **• Faster loading of documents
    • Adding, removing, renaming, and changing the order of pages are all *much* faster
    **• Pages are now inserted after the current page, not at the end of the notebook
    • Smaller sidebar that has been split into two tabs: pages and properties
    • Improved splash screen
-   • Major refactoring to have a more consistent naming scheme and remove old junk code
+   • Major refactoring to have a more consistent naming scheme and remove old junk c
+   **• Bug Fix: Fix bad performance when changing font styles on a page that has large images 
    • Bug Fix: Word count wouldn't update automatically when opening a new file
    • Bug Fix: Pages with the same name couldn't be imported without changing the name
    • Bug Fix: Undo/redo would sometimes leave text selected incorrectly
