--- a/Changelog.txt
+++ b/Changelog.txt
@@ -34,7 +34,7 @@ Version 11.0 (June 30)
    • Smaller sidebar that has been split into two tabs: pages and properties
    • Improved splash screen
    • Major refactoring to have a more consistent naming scheme and remove old junk c
-   **• Bug Fix: Fix bad performance when changing font styles on a page that has large images 
+   • Bug Fix: Fix bad performance when changing font styles on a page that has large images 
    • Bug Fix: Word count wouldn't update automatically when opening a new file
    • Bug Fix: Pages with the same name couldn't be imported without changing the name
    • Bug Fix: Undo/redo would sometimes leave text selected incorrectly
