Pressing CTRL+S on character editor and dictionary now saves the notebook

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,7 +3,7 @@ Version 11.1 (TBD)
 
 Version 11.0 (June 30)
    • Easier resizing of images before insertion
-   **• Pressing CTRL+S on character editor and dictionary now saves the notebook
+   • Pressing CTRL+S on character editor and dictionary now saves the notebook
    **• Export all pages wizard
    • Display shortcut keys on menus
    • Added tons of shortcut keys to make all across the program
@@ -15,7 +15,7 @@ Version 11.0 (June 30)
    • Add "New Window" menu item to easily open a new LangPad instance
    • Paste images directly from File Explorer
    • Show current line in status bar
-   **• Add options to wrap selected text in brackets [] and // or remove brackets
+   • Add options to wrap selected text in brackets [] and // or remove brackets
    • Add shortcut keys to wrap text in brackets
    • Zoom in increments of 0.2 (a less drastic jump)   
    • The page title of HTML documents now matches their name in LangPad
