--- a/Changelog.txt
+++ b/Changelog.txt
@@ -31,8 +31,10 @@ Version 11.0 (June 30)
    • Adding, removing, renaming, and changing the order of pages are all *much* faster
    • Pages are now inserted after the current page, not at the end of the notebook
    • Smaller sidebar that has been split into two tabs: pages and properties
+   • Move sidebar to the left side
    • Improved splash screen
    • Major refactoring to have a more consistent naming scheme and remove old junk
+   **• Bug Fix: Lag when typing 
    • Bug Fix: Old Language Pad 4.x-5.x files could not be opened
    • Bug Fix: Fix bad performance when changing font styles on a page that has large images 
    • Bug Fix: Word count wouldn't update automatically when opening a new file
