--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,10 +1,13 @@
 Version 11.1 (TBD)
    **• Frequently used characters tab
+   **• Export pages to Markdown
+   **• Export dictionary to Markdown
+   **• Copy text as Markdown
+   **• Export all pages wizard
 
 Version 11.0 (June 30)
    • Easier resizing of images before insertion
    • Pressing CTRL+S on character editor and dictionary now saves the notebook
-   **• Export all pages wizard
    • Display shortcut keys on menus
    • Added tons of shortcut keys to make all across the program
    **• TAB to increase indent and SHIFT + TAB to decrease indent when at start of line
@@ -24,9 +27,6 @@ Version 11.0 (June 30)
    • PageNameDialog title changes depending on the mode (add/duplicate/rename page)
    • PageNameDialog text box is now automatically focused when opened
    • Add Patreon, GitHub, and website links to about box
-   **• Export pages to Markdown
-   **• Export dictionary to Markdown
-   **• Copy text as Markdown
    **• Re-add themes
    • Adding, removing, renaming, and changing the order of pages are all *much* faster
    • Pages are now inserted after the current page, not at the end of the notebook
@@ -36,7 +36,7 @@ Version 11.0 (June 30)
    • Major refactoring to have a more consistent naming scheme and remove old junk
    **• Bug Fix: Lag when typing 
    • Bug Fix: Old Language Pad 4.x-5.x files could not be opened
-   • Bug Fix: Fix bad performance when changing font styles on a page that has large images 
+   **• Bug Fix: Fix bad performance when changing font styles on a page that has large images 
    • Bug Fix: Word count wouldn't update automatically when opening a new file
    • Bug Fix: Pages with the same name couldn't be imported without changing the name
    • Bug Fix: Undo/redo would sometimes leave text selected incorrectly
