Finish desert theme

--- a/src/LangPad/Editors/CharacterEditor.resx
+++ b/src/LangPad/Editors/CharacterEditor.resx
@@ -146,50 +146,50 @@
   <data name="ExportLocalToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO5SURBVFhH7ZbrT1N3HMarmfsDeLGQmI0XS/bGZFHjNgKB
-        RqwRcGOOQelkU9C4EXUzbsnmEptOs0uWrBnJtBXUUKQX7tDRIi2lFUvKIU0rboES7r3R9vTG9Q0Le8av
-        nvliHLoe6kue5JOTc3LO8zzf37nk8Ha1q/9KIpHsFQqrDguF1YIXxYeiMwcY+/+XSHTuiEzWIHW7fcPz
-        8/NU2rjdNsmNn36sqLjwOhORXGWis4Ver29kY2MD6+vraUN8HM6nPSJR9TtMRHKRAjabXbO2toaVlZW0
-        IT5d2l65UHg2m4lILlLAaqU0q6urWF5e5kQkFodMO4Q5X/D5MeLT1a2TcSrw6JFNQy5eXFzkhD9Io/KW
-        Fp/W6+FwzSaOEZ+Orh0UWFpaQjwe54QvEEKlXI8blAcimR7d1tFEiR0VIIbRaJQTHn8AFbf1+NW1hJtO
-        GqV3zZDphqFu67zDscCQOhaLIRKJsKKxOHBVYdrClQYjimr1EI8u4uJIDNccMZQ02lAkrnMeK70gYCKS
-        61kBq5oE0TTNyncaC4o1f6Kyz7OFMwML+JyKo8wcwenBKC4Nx1GgHNnI+uy3fp7gi9eYmO1FCpjNVnU4
-        HEYoFGJForbgvbYpfGSMoLyPnfd7wwk+eBjGJ6Zo4vysLxWP9xV++yYTxS5SoL9/UE0mDQQCrIibBlCo
-        nER5Txilv7NzsotOUNJNQ6QPQyB3/v3qZYXl5aJrbzBR7Hq2AoOqYDAIv9/PyvUHJrwtpZAv/2MLBfcm
-        UNYZxonmEE62bj6InSEclFJ/7a+SannHv3qFidlepIDJZFGRSX0+Hyv6oSeo7Xj8HGmLGT+rjLip0IMv
-        6cApDY1iFY13lQHk/jCAE1/LqMKyaj4TkVykgMFgVpFJPR5PSszMzGB8fBy2ETuOittw6gGN43fcyJP0
-        oLbFiPuNSm6vocFgUpFJ3W53SszOzmJiYgKU3YGj19uR94sLx8TtaH04iOnpaTQ2NXP7EPX2GlRksrm5
-        uZSZnJyE3TmK/G9aUP59O0xWCmNjY4lySnXbbc4F/p0sVchtGBt3oVbdB/uTp3C5XIlSxEfR1HyLUwGd
-        zqgkU5Hl48rU1FQimGzJ/uZPyc4KkKmISbqQQRQKDbcCm9+BzoWFBXi93rQhPq3t2vup/hHtzc8XFFed
-        r2mor1fo5PJ6Q7rU1d3Tn/743N3cXEFKK7AnMzMz6/Bb2cKcvIKa7Bz+1XTJySmoOXToSElGRsZ+JiMl
-        7eHz+S9tbve9AIjPrna1jXi8fwDOKECJFNzfxAAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO3SURBVFhH7ZbrT1t1HMa7xfkH8MKQLMoLE9+YaLZMJRBo
+        YF0GTHEilDp0gy1T4jXTRGeypm7xEhMbSdzawbZQRi/codLDaCntWEk5pCljGijh3httT29c32DwkV93
+        3As51B66lzzJJyfn5Jzneb6/c8kR7Gtf/5VMJjsoFlcfFYtrRE+LdyVnX2bt/18SyfljCkWj3O32jSwu
+        LtJp43bbZVd/+rGy8uKLbERylUvOFXm9vtGtrS1sbm6mDfFxjj3qlUhq3mAjkosUsNsduo2NDaytraUN
+        8enW9ynF4nPZbERykQI2G61bX1/H6uoqLyKxOBT6YSz4gk+OEZ/uHoOCV4H79+06cvHy8jIv/EEGVdf1
+        +LCBgtM1nzhGfDq791BgZWUF8XicF75ACFVKCldpDyQKCj228USJPRUghtFolBcefwCVNyj86lrBtTEG
+        ZbcsUBhGoG3vusmzwLA2FoshEolworM6cUll3sEXjSYU11GQji/j49EYLjtjKG2yo1haP3a87KKIjUiu
+        xwVsWhLEMAwn3+msKNH9iap+zw7ODi7hMzqOcksEZ4ai+GQkjgI1vZX10W8DAtHnL7Axu4sUsFhs2nA4
+        jFAoxIlMa8Vb7TN4zxRBRT83b/eFE7xzL4wPzNHE+Vlfqh4cKvr2FTaKW6TAwMCQlkwaCAQ4kTYPokg9
+        jYreMMp+5+ZUN5OgtIeBhApDpHD+/fynKuuzxZdfYqO49XgFhjTBYBB+v5+TK3fNeF1OI1/5xw4Kb0+h
+        vCuMky0hnGrbfhC7QnhVTv91uFquF5z46jk2ZneRAmazVUMm9fl8nFDDD1HX+eAJ8lYLftaYcE1FQSjr
+        xGkdgxINgzfVAeT+MIiTXyvoovIaIRuRXKSA0WjRkEk9Hk9KzM3NYXJyEvZRBwqk7Th9l8GJm27kyXpR
+        12rCnSY1v9fQaDRryKRutzsl5ufnMTU1BdrhRMGVDuT94sJxaQfa7g1hdnYWTc0t/D5EfX1GDZlsYWEh
+        Zaanp+EYG0f+N62o+L4DZhuNiYmJRDm1tv0G7wL/TpYq5DZMTLpQp+2H4+EjuFyuRCnio2puuc6rgMFg
+        UpOpyPLxZWZmJhFMtmR/+6dkbwXIVMQkXcggKpWOX4Ht70DX0tISvF5v2hCftg79nVT/iA7m54tKqi/U
+        NjY0qAxKZYMxXerrb1Nn3j9/KzdXlNIKHMjMzMw6+lq2OCevsDY7R3gpXXJyCmuPHDlWmpGRcZjNSEkH
+        hELhM9vbQ08B4rOvfe0igeAfo9ZAhBqek6oAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="ClearLocalToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATqSURBVFhH7ZZ7TNNXFMcvMgQFEcfCY0yBbbK5adxYjBMT
-        nE4eQrbyLsVCQYEpoiIMpkYo8lBr0BrLzHwwhGTIBIJLFHU6FMEHjNcUpSBQqRQpBbu1hSIC393f8luy
-        7K8N2yxZ/CTfP36559xzzu/ce3LJS/5XgBCTwxGmHIlgZpFEYF4ijiAfsEvG53g8McsXWFSd2uI4Xpnt
-        iev53ClJ+CzNoRAyizUxLhK++cFK4eLREqHH2InNjl0NhZE4Fm+lE3PNXVgT43E4nLx/hG81Ij23A0di
-        rJXiKKtHt0+GYB/ffJhpC2tmPI5GzTxTK/aa6K6IRknCfN2FHM/xMxnuYyKetZg1MR5iAbE5Gmk52lEW
-        jfun1qDtxCdo/MYX+3mztfsC5tiyZsZDFGa2vjDFRdtW4IUm8RK0fO0BSdx8XWaYbQprYlwORFhdrMp2
-        xx2RG25TFSY6P9/DtWsSCskM1sTwVArIR7X7XbZfy7CLy+VZj9XkuuFGpj0upbsgNcxRmxLk4MyaGodz
-        MWS5rE6gVXcJ8fBK3FTLt8tQs9ceWXyb0dQQp0jWzDj4+voK/Nb5Pk9KjEDJSR7a6/nQKFKhak9A7elF
-        I1fTLdLOJhAr1tywMNMuKnB1ZXAQZzI2NhYbNggQGOCPrQnrcLHUB123Aiers62KKmLJG6yL4bjMJ5Y3
-        sp0Oymoif71CB07m7hAEBfmByw0En89HODcIHM5avZDrbPjJV7WVmNdmLzigaNs9PqmR4NnQdowpozEo
-        9UZlsSdiY7wRwPEH0xofHx/DJgB6naqF9mnKmwm6Ke1xTKq/xLgqDqP9XAx3rqH6GAMPltMWBEC00ekM
-        62Y4Lia/Giq7IVBN6k5jSlcEvXIn9E/40Mk/R3+rO4Y63NF/1xXDXTzUiW3rzoaSmazri1MRZ+YuLfPr
-        mNAU0OCFGFWKaeWxGFHw8LQrHAP3PsTg/UWQNzhAKfVBY7FbWwWf2LHuLwYdNi5NBSvqnqmOYVKbD70q
-        Dxp5IvT9ERgd2IWhrmR69ZZB0bIAsltzaQLeaC11f/DDRmLPbjF9vucT1/qj71zQ9abjSXvSc70ynQbf
-        g5HHPBo8Cb893gVVpwDKNjfI7thBVu+Mwc4AtJQsbX/hBIrpdbu21+m0sjEMPVVeA/dKV8o0j/dD3R0O
-        /cAXtA3ptNoNUHWshaLZCfImD/odh6e9ybhzfGFz1XpizW41fcqjycJbeW+dv5674Jzi7q4pdc8m6Poi
-        afAsqHuCoXq4DQN3F0L+85vobWS+d9AEMnA5y/I8dZ9DNZvKnMqUaloPEpNcf7K4WvR2lax504S2LxNj
-        qix0n/fTSqs5U0MPg9HX5Ii+e0Fov7QSw7KvoHywGWXJJnnUlzmEzDtgLhUzki2oXqH6VzAPSdvlzmRR
-        8TbbQy3feTzqvLl+4qrIvmNQmkb770OvoAd66wPRUL74mVqeAenVVSNZfiSM+r1O9dckLKn+/Bv/GCZj
-        xtmByjV4Cfn0cJhZzo85jo3Sn9aM9DVHQfHLRtQec+ppubxao5anozrPpmGVM3mX9XmNah4V0w6mGGY2
-        TOt9wGTOJMJs6LCCBtjtRT4riJ+xszzV9ESRwOTAlZx5NXWS+a0FMTO2UBumahuqv58Dg8BUYEbFbMpU
-        xQRgfu9szlJiE/reH/1m1qd98F7yH0DI7yXceNWUh2/oAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATqSURBVFhH7ZZ7TNNXFMcvMkQFEcfCYwyL22A6NW4shokJ
+        TieCmMlDpBQKBQUmvlBUpkYoAj4wSBfryEAZQiI6heAShm8cDxUYLxWlPCsVGKVgt7ZQ3t/d3/Jbsuyv
+        DdosWfwk3z9+uefcc87v3HtyyWv+V4AQg7RAQy+xYGaOWGCcJwokH7FL+icjkhidE8wqvrDTZrQwyRX3
+        xdxJccBs1Rk/Mps10S9ivvHpQuGSoUvClcOZUTZt1dnBSI800Yi4xvasif5ICyBLREGmg5Lr+/B1mJlc
+        FGL64tF5P5zgGw8wbWHN9MfZkJmXy9PWjbcXhCIvyk5TlOQ6mhfvNJzCMxOxJvpDJCDmZ4NNhpqvheLZ
+        hbVozPwMNd964CRvjvqE91wL1kx/pPgbBWXv56gbs9xQK1qG+m9cII6w0yT4W+xnTfTLqUDTG8VJTqhM
+        ccQjquydnLGjXMtaoZDMYE10T6GAfFJ+0j76frxlRDLPbLj0uCPKEqxwM84eB/xt1Pt9rTmsqX64Hkac
+        pRUCtbJNiJbbEZP1361A6TErHOPPGzroZxvMmukHDw8PgecGj7G9uwKRd56Hpio+VN0HoWjagbKLiwbv
+        xs2KvbqDmLLmuoWZdiE+awp9fTZNhIeHY+tWAXy8N2L3jg24ccUdrQ+8J0qSTHMKwsk7rIvuuMUnJmVJ
+        tqelpcG/3qEDJ+GIH3x9PcHl+oDP5yOA6wsvr3VaIZej+8lXvJsYlyctONXdeGR0QiXGSH80huWh6JOs
+        R2GuK8LD1sPbayOY1ri7u+s2AdDrVCK0ipU/iNJMqjMwoTyAUUUEhnq4GGhZS/Upep870xZ4I2Wb7WXW
+        TXfciHlzi7RMoJjQXMSkJgda+SFof+FDI9uEngYn9Dc7oefJQgy08VAhsqi4uoXMZF2nT0GEkZPkmmfz
+        uCqLBs/GkFxEKw/HYDcPr9oC0Pv0Y/Q9WwxZtTXkEnfU5Do2FvCJJes+Peiwsa/NWlkxokjHhPoctIpU
+        qGS7oO0JxFDvYfS3xdCrtwLd9QsgfTiPJrAeDVecnv+wjVixW0yd7/lkYdXZD37UdMahpyl6TCuPo8GP
+        YvAljwbfi99eHoaiRQB5oyOklZaQVnHQ1+KN+rzlTdNOIJdet/vHbC/Ka/zRUezW+/TKKqnq5Uko2wOg
+        7f2StiGOVrsViuZ16K6zhazWhX5H4FVnDCozHOqKg4gZu9XUyQ8lDg9T3yv66fiC612PD08qO7ZD0xVM
+        gydC2bEZitY96H3iANnP76KzhvneRxOIx61EkyLqPpdqDpUxlSHVlB4kBsc3kqUlKe8Xd9RtH1d3JWBY
+        kYj2Ik910z2vyf7WzeiqtUHXU1803VyFAelXkD+PwrUYg1TqyxxC5h0wj4oZybOo3qD6VzAPSQtnDlmc
+        u8fiTP0llxfND4LG76ZYNfdJYmn/3ekVdEFnlQ+q8peOKGXxkNxdPZjoSfyp39tUf03ChOrPv/GPYTJm
+        nK2pFm5eRj5P8zdKvp1sUyO5t2awqy4E3Y+3oTzdtqPu1hqVUhaHklTz6tUcsoj1eYtqPhXTDqYYZjZM
+        6X3AZM4kwmxovZIGOOJGvsiKnHEo/6BhZo7A4NSd5PmlFWK7hqywGTupDVO1OdXfz4FOYCowomI2Zapi
+        AjC/d47XcmK+5cM/+s2sT/ngveY/gJDfAaW3eKsWXri7AAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="FileToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -220,50 +220,50 @@
   <data name="ExportFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO5SURBVFhH7ZbrT1N3HMarmfsDeLGQmI0XS/bGZFHjNgKB
-        RqwRcGOOQelkU9C4EXUzbsnmEptOs0uWrBnJtBXUUKQX7tDRIi2lFUvKIU0rboES7r3R9vTG9Q0Le8av
-        nvliHLoe6kue5JOTc3LO8zzf37nk8Ha1q/9KIpHsFQqrDguF1YIXxYeiMwcY+/+XSHTuiEzWIHW7fcPz
-        8/NU2rjdNsmNn36sqLjwOhORXGWis4Ver29kY2MD6+vraUN8HM6nPSJR9TtMRHKRAjabXbO2toaVlZW0
-        IT5d2l65UHg2m4lILlLAaqU0q6urWF5e5kQkFodMO4Q5X/D5MeLT1a2TcSrw6JFNQy5eXFzkhD9Io/KW
-        Fp/W6+FwzSaOEZ+Orh0UWFpaQjwe54QvEEKlXI8blAcimR7d1tFEiR0VIIbRaJQTHn8AFbf1+NW1hJtO
-        GqV3zZDphqFu67zDscCQOhaLIRKJsKKxOHBVYdrClQYjimr1EI8u4uJIDNccMZQ02lAkrnMeK70gYCKS
-        61kBq5oE0TTNyncaC4o1f6Kyz7OFMwML+JyKo8wcwenBKC4Nx1GgHNnI+uy3fp7gi9eYmO1FCpjNVnU4
-        HEYoFGJForbgvbYpfGSMoLyPnfd7wwk+eBjGJ6Zo4vysLxWP9xV++yYTxS5SoL9/UE0mDQQCrIibBlCo
-        nER5Txilv7NzsotOUNJNQ6QPQyB3/v3qZYXl5aJrbzBR7Hq2AoOqYDAIv9/PyvUHJrwtpZAv/2MLBfcm
-        UNYZxonmEE62bj6InSEclFJ/7a+SannHv3qFidlepIDJZFGRSX0+Hyv6oSeo7Xj8HGmLGT+rjLip0IMv
-        6cApDY1iFY13lQHk/jCAE1/LqMKyaj4TkVykgMFgVpFJPR5PSszMzGB8fBy2ETuOittw6gGN43fcyJP0
-        oLbFiPuNSm6vocFgUpFJ3W53SszOzmJiYgKU3YGj19uR94sLx8TtaH04iOnpaTQ2NXP7EPX2GlRksrm5
-        uZSZnJyE3TmK/G9aUP59O0xWCmNjY4lySnXbbc4F/p0sVchtGBt3oVbdB/uTp3C5XIlSxEfR1HyLUwGd
-        zqgkU5Hl48rU1FQimGzJ/uZPyc4KkKmISbqQQRQKDbcCm9+BzoWFBXi93rQhPq3t2vup/hHtzc8XFFed
-        r2mor1fo5PJ6Q7rU1d3Tn/743N3cXEFKK7AnMzMz6/Bb2cKcvIKa7Bz+1XTJySmoOXToSElGRsZ+JiMl
-        7eHz+S9tbve9AIjPrna1jXi8fwDOKECJFNzfxAAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO3SURBVFhH7ZbrT1t1HMa7xfkH8MKQLMoLE9+YaLZMJRBo
+        YF0GTHEilDp0gy1T4jXTRGeypm7xEhMbSdzawbZQRi/codLDaCntWEk5pCljGijh3httT29c32DwkV93
+        3As51B66lzzJJyfn5Jzneb6/c8kR7Gtf/5VMJjsoFlcfFYtrRE+LdyVnX2bt/18SyfljCkWj3O32jSwu
+        LtJp43bbZVd/+rGy8uKLbERylUvOFXm9vtGtrS1sbm6mDfFxjj3qlUhq3mAjkosUsNsduo2NDaytraUN
+        8enW9ynF4nPZbERykQI2G61bX1/H6uoqLyKxOBT6YSz4gk+OEZ/uHoOCV4H79+06cvHy8jIv/EEGVdf1
+        +LCBgtM1nzhGfDq791BgZWUF8XicF75ACFVKCldpDyQKCj228USJPRUghtFolBcefwCVNyj86lrBtTEG
+        ZbcsUBhGoG3vusmzwLA2FoshEolworM6cUll3sEXjSYU11GQji/j49EYLjtjKG2yo1haP3a87KKIjUiu
+        xwVsWhLEMAwn3+msKNH9iap+zw7ODi7hMzqOcksEZ4ai+GQkjgI1vZX10W8DAtHnL7Axu4sUsFhs2nA4
+        jFAoxIlMa8Vb7TN4zxRBRT83b/eFE7xzL4wPzNHE+Vlfqh4cKvr2FTaKW6TAwMCQlkwaCAQ4kTYPokg9
+        jYreMMp+5+ZUN5OgtIeBhApDpHD+/fynKuuzxZdfYqO49XgFhjTBYBB+v5+TK3fNeF1OI1/5xw4Kb0+h
+        vCuMky0hnGrbfhC7QnhVTv91uFquF5z46jk2ZneRAmazVUMm9fl8nFDDD1HX+eAJ8lYLftaYcE1FQSjr
+        xGkdgxINgzfVAeT+MIiTXyvoovIaIRuRXKSA0WjRkEk9Hk9KzM3NYXJyEvZRBwqk7Th9l8GJm27kyXpR
+        12rCnSY1v9fQaDRryKRutzsl5ufnMTU1BdrhRMGVDuT94sJxaQfa7g1hdnYWTc0t/D5EfX1GDZlsYWEh
+        Zaanp+EYG0f+N62o+L4DZhuNiYmJRDm1tv0G7wL/TpYq5DZMTLpQp+2H4+EjuFyuRCnio2puuc6rgMFg
+        UpOpyPLxZWZmJhFMtmR/+6dkbwXIVMQkXcggKpWOX4Ht70DX0tISvF5v2hCftg79nVT/iA7m54tKqi/U
+        NjY0qAxKZYMxXerrb1Nn3j9/KzdXlNIKHMjMzMw6+lq2OCevsDY7R3gpXXJyCmuPHDlWmpGRcZjNSEkH
+        hELhM9vbQ08B4rOvfe0igeAfo9ZAhBqek6oAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="ClearFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATqSURBVFhH7ZZ7TNNXFMcvMgQFEcfCY0yBbbK5adxYjBMT
-        nE4eQrbyLsVCQYEpoiIMpkYo8lBr0BrLzHwwhGTIBIJLFHU6FMEHjNcUpSBQqRQpBbu1hSIC393f8luy
-        7K8N2yxZ/CTfP36559xzzu/ce3LJS/5XgBCTwxGmHIlgZpFEYF4ijiAfsEvG53g8McsXWFSd2uI4Xpnt
-        iev53ClJ+CzNoRAyizUxLhK++cFK4eLREqHH2InNjl0NhZE4Fm+lE3PNXVgT43E4nLx/hG81Ij23A0di
-        rJXiKKtHt0+GYB/ffJhpC2tmPI5GzTxTK/aa6K6IRknCfN2FHM/xMxnuYyKetZg1MR5iAbE5Gmk52lEW
-        jfun1qDtxCdo/MYX+3mztfsC5tiyZsZDFGa2vjDFRdtW4IUm8RK0fO0BSdx8XWaYbQprYlwORFhdrMp2
-        xx2RG25TFSY6P9/DtWsSCskM1sTwVArIR7X7XbZfy7CLy+VZj9XkuuFGpj0upbsgNcxRmxLk4MyaGodz
-        MWS5rE6gVXcJ8fBK3FTLt8tQs9ceWXyb0dQQp0jWzDj4+voK/Nb5Pk9KjEDJSR7a6/nQKFKhak9A7elF
-        I1fTLdLOJhAr1tywMNMuKnB1ZXAQZzI2NhYbNggQGOCPrQnrcLHUB123Aiers62KKmLJG6yL4bjMJ5Y3
-        sp0Oymoif71CB07m7hAEBfmByw0En89HODcIHM5avZDrbPjJV7WVmNdmLzigaNs9PqmR4NnQdowpozEo
-        9UZlsSdiY7wRwPEH0xofHx/DJgB6naqF9mnKmwm6Ke1xTKq/xLgqDqP9XAx3rqH6GAMPltMWBEC00ekM
-        62Y4Lia/Giq7IVBN6k5jSlcEvXIn9E/40Mk/R3+rO4Y63NF/1xXDXTzUiW3rzoaSmazri1MRZ+YuLfPr
-        mNAU0OCFGFWKaeWxGFHw8LQrHAP3PsTg/UWQNzhAKfVBY7FbWwWf2LHuLwYdNi5NBSvqnqmOYVKbD70q
-        Dxp5IvT9ERgd2IWhrmR69ZZB0bIAsltzaQLeaC11f/DDRmLPbjF9vucT1/qj71zQ9abjSXvSc70ynQbf
-        g5HHPBo8Cb893gVVpwDKNjfI7thBVu+Mwc4AtJQsbX/hBIrpdbu21+m0sjEMPVVeA/dKV8o0j/dD3R0O
-        /cAXtA3ptNoNUHWshaLZCfImD/odh6e9ybhzfGFz1XpizW41fcqjycJbeW+dv5674Jzi7q4pdc8m6Poi
-        afAsqHuCoXq4DQN3F0L+85vobWS+d9AEMnA5y/I8dZ9DNZvKnMqUaloPEpNcf7K4WvR2lax504S2LxNj
-        qix0n/fTSqs5U0MPg9HX5Ii+e0Fov7QSw7KvoHywGWXJJnnUlzmEzDtgLhUzki2oXqH6VzAPSdvlzmRR
-        8TbbQy3feTzqvLl+4qrIvmNQmkb770OvoAd66wPRUL74mVqeAenVVSNZfiSM+r1O9dckLKn+/Bv/GCZj
-        xtmByjV4Cfn0cJhZzo85jo3Sn9aM9DVHQfHLRtQec+ppubxao5anozrPpmGVM3mX9XmNah4V0w6mGGY2
-        TOt9wGTOJMJs6LCCBtjtRT4riJ+xszzV9ESRwOTAlZx5NXWS+a0FMTO2UBumahuqv58Dg8BUYEbFbMpU
-        xQRgfu9szlJiE/reH/1m1qd98F7yH0DI7yXceNWUh2/oAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATqSURBVFhH7ZZ7TNNXFMcvMkQFEcfCYwyL22A6NW4shokJ
+        TieCmMlDpBQKBQUmvlBUpkYoAj4wSBfryEAZQiI6heAShm8cDxUYLxWlPCsVGKVgt7ZQ3t/d3/Jbsuyv
+        DdosWfwk3z9+uefcc87v3HtyyWv+V4AQg7RAQy+xYGaOWGCcJwokH7FL+icjkhidE8wqvrDTZrQwyRX3
+        xdxJccBs1Rk/Mps10S9ivvHpQuGSoUvClcOZUTZt1dnBSI800Yi4xvasif5ICyBLREGmg5Lr+/B1mJlc
+        FGL64tF5P5zgGw8wbWHN9MfZkJmXy9PWjbcXhCIvyk5TlOQ6mhfvNJzCMxOxJvpDJCDmZ4NNhpqvheLZ
+        hbVozPwMNd964CRvjvqE91wL1kx/pPgbBWXv56gbs9xQK1qG+m9cII6w0yT4W+xnTfTLqUDTG8VJTqhM
+        ccQjquydnLGjXMtaoZDMYE10T6GAfFJ+0j76frxlRDLPbLj0uCPKEqxwM84eB/xt1Pt9rTmsqX64Hkac
+        pRUCtbJNiJbbEZP1361A6TErHOPPGzroZxvMmukHDw8PgecGj7G9uwKRd56Hpio+VN0HoWjagbKLiwbv
+        xs2KvbqDmLLmuoWZdiE+awp9fTZNhIeHY+tWAXy8N2L3jg24ccUdrQ+8J0qSTHMKwsk7rIvuuMUnJmVJ
+        tqelpcG/3qEDJ+GIH3x9PcHl+oDP5yOA6wsvr3VaIZej+8lXvJsYlyctONXdeGR0QiXGSH80huWh6JOs
+        R2GuK8LD1sPbayOY1ri7u+s2AdDrVCK0ipU/iNJMqjMwoTyAUUUEhnq4GGhZS/Upep870xZ4I2Wb7WXW
+        TXfciHlzi7RMoJjQXMSkJgda+SFof+FDI9uEngYn9Dc7oefJQgy08VAhsqi4uoXMZF2nT0GEkZPkmmfz
+        uCqLBs/GkFxEKw/HYDcPr9oC0Pv0Y/Q9WwxZtTXkEnfU5Do2FvCJJes+Peiwsa/NWlkxokjHhPoctIpU
+        qGS7oO0JxFDvYfS3xdCrtwLd9QsgfTiPJrAeDVecnv+wjVixW0yd7/lkYdXZD37UdMahpyl6TCuPo8GP
+        YvAljwbfi99eHoaiRQB5oyOklZaQVnHQ1+KN+rzlTdNOIJdet/vHbC/Ka/zRUezW+/TKKqnq5Uko2wOg
+        7f2StiGOVrsViuZ16K6zhazWhX5H4FVnDCozHOqKg4gZu9XUyQ8lDg9T3yv66fiC612PD08qO7ZD0xVM
+        gydC2bEZitY96H3iANnP76KzhvneRxOIx61EkyLqPpdqDpUxlSHVlB4kBsc3kqUlKe8Xd9RtH1d3JWBY
+        kYj2Ik910z2vyf7WzeiqtUHXU1803VyFAelXkD+PwrUYg1TqyxxC5h0wj4oZybOo3qD6VzAPSQtnDlmc
+        u8fiTP0llxfND4LG76ZYNfdJYmn/3ekVdEFnlQ+q8peOKGXxkNxdPZjoSfyp39tUf03ChOrPv/GPYTJm
+        nK2pFm5eRj5P8zdKvp1sUyO5t2awqy4E3Y+3oTzdtqPu1hqVUhaHklTz6tUcsoj1eYtqPhXTDqYYZjZM
+        6X3AZM4kwmxovZIGOOJGvsiKnHEo/6BhZo7A4NSd5PmlFWK7hqywGTupDVO1OdXfz4FOYCowomI2Zapi
+        AjC/d47XcmK+5cM/+s2sT/ngveY/gJDfAaW3eKsWXri7AAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="SearchToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -272,25 +272,25 @@
   <data name="SearchToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAQLSURBVFhH7ZZtaJNXFMcrqBP3QYUxQbAqc77UtE2avqVJ
-        01diu7a0TW1a+saa0rQ2tVMb62tRmZmi25hWdM4PG2zVj5soKCgMCn5YQUalo5VqFVlhat2w5kVp88Tf
-        kSu4T5LWBj/4hx83T+6955x77rn3eWLe652X0WhcBObU1NRNOTk5W9LT0x08W+Lj45eoIbMjg8GwDIcH
-        cnNzh7Oysu7k5eUN5+fn34C/eL5F3xAcSU5OXq6mvD2ZTCYrjgczMzPvdXR0/NLf3398cnLy21AodFjT
-        tP0DAwNdyEsgN7Ozs4eSkpJsaurMlZKSYsXwGKu7iaNTOD2rOAlfwyGC2APbx8bG2gsKCn4j0L/ZopkH
-        wd5+ZLFYhjIyMu6NjIx8h7MTcAZ+AAngG/DivFsCgM3j4+M2xl8jiNuybcrU9ETquzEW8Hq94vQQHIVX
-        gUh7DCQD+6AT3OFwWN/Z2Wlk7rjZbD6qTEUu0j6XCh/E0KOJiYm94gRnX+LgCK0EInwFB+mTfgmgif5Y
-        2o+Z/wdzR2kXKJORifTHksZ/qfJhDHbADtiHgwMSiEKcd/PfLtptYOL3StplzDtjtVonsLNOmYxMFJ+e
-        FfgKCwsHMerC6BaQVe4GWbHsu6ReClD+/4xx62g/oY0tKSk5zokIyp2hTEYmqngVBfiEqv4Ho/XQDG7Y
-        Ch7ogp3wBRSAAXSwRrJQXFx8lfT7uRd0ymRkiouLm5+WlnYfQ897e3sbMVwFTmgRcPI5rZ02mzYDkiFB
-        sjA6Orq2rKzsidRPQkLCh8pk5CILZ8lACGN/BgKBFTj4FGSVsto0nFlos+B/AVRVVX3PFoTYxvPK1PSU
-        mJi4krP8uKmpacput58PBoOrcbIeEpXDdDBBKiSBrq2tbZvT6ZyS+pl2Ab4u9tDJafC3tLSEampqBnt6
-        ejbiaANIEOJUMPT19Znr6uouut1ujROgcX8cUyZmLoJwk86nLpdL45IJEcxDVnoVZ+fgUmtr612PxzPV
-        3t6uUbhhAtbKy8t9DoejTJmYuXjBGOE6xgNsRwjHYZxqOA2zco2Kf07KBxjzAJ5JFgjAX11d3aVMvB3J
-        vsJ2+BEuw0849JChDdLPyVnK8y2dThfgDfoyExTlz2Rv3ksD0RDFu1iv198gCL8EUVFR4SMT1ysrKxep
-        IbMvMrOQE/Q72fDxKtdwHqytrb1LIa9QQ2ZfcpkRwAV4yheU1tDQMEkm/iOQFDUkKppDAKdfC0KjaP31
-        9fV21R8dEUA3+Gw2m9bY2KhxuQW4sA6r7uiIAHZLEEVFRRKA1tzcHKAmfuW6/0ANmX1xqbnAX1paKkc0
-        zDeDUKO6oyOy4OBF90ycc3OOSLGqruiJz709vC+ucGNG7254rzcrJuYFy6vE+gU08EkAAAAASUVORK5C
-        YII=
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAQQSURBVFhH7ZZtaJNXFMcrbG7MD24wJgirintxTV+Spm9p
+        0vSVtLUtbUOblr6xpjWtTa2aZt10ljlmpug2dB1uzg8TtPbjJgoOOhAKfrAgo1JppbOKWNCtKta8KG2e
+        7HfkDtynkdaGffAPP26e3Pucc+655977xL3Q/15Go3E1mDMyMmry8/O3ZWVlOXi2JCUlvaGGLI8MBsNa
+        HO4tKCiYzM3NvV5YWDhZVFR0Ga7yfI2+CTiQlpb2tnrl+clkMllxPJ6Tk3Ozp6fn1Ojo6JH5+flvwuHw
+        fk3TPhsbG+tDPgK5kpeXN5GammpTry5d6enpVgzPMLsrODqK0+OK7+Ar2EcQu8EzMzPTXVJS8guB3maJ
+        lh4Ea/umxWKZyM7Ovjk1NXUYZ9/CMfgRJICvwYfzfgkAts7OztoY/xtB/CHLpkwtTqS+H2NBn88nTvfB
+        QfgnEGkPgWRgD/SCOxKJ6Ht7e428O2s2mw8qU9GLtL9EhY9j6K+5ublPxQnOvsDBAVoJRPgSPqdP+iWA
+        Nvrjad/i/Uu8O037qjIZnUh/PGm8T5VPYrAHPoI9ONgrgSjEeT//fUK7E0z8Xk+7lveOWa3WOexsUiaj
+        E8WnZwb+0tLScYy6MLoNZJa7QGYs6y6plwKU/zczbhPtRtr4ioqKI+yIkJwZymR0ooo3UIAPqeo7GG2G
+        LeCGHeCFPvgYtkMJGCAR3pMslJeXD5P+AOdCojIZnRISElZmZmbeKisrezI4ONiK4TpwQoeAkw9p7bR5
+        tNmQBsmShenp6ferqqoeSv0kJyevUiajF1k4XlxcHMbY78FgcB0O3gWZpcw2E2cW2lz4VwB1dXU/kIEw
+        yzikTC1OKSkp69nL99ra2hbsdvtQKBR6BycfQIpymAUmyIBUSOzq6trpdDoXpH4WXYDPijV0shsCLpcr
+        3NDQMD4wMFCMIx1IEOJUMIyMjJibmprOut1ujR2gcX4cUiaWLoJwk85HBKF5PJ5wR0fHn8x0GGen4Vxn
+        Z+cNr9e70N3drVG4EQLWqqur/Q6Ho0qZWLq4YIxwEeNBjIdxHMGphtMIM9eo+CekfIwxd+GxZIEAAvX1
+        9X3KxPORrCt44Cc4Dydw6CVDOuln56zh+ZpOpwtygz7NBEV5kuy9/NRALETxvq7X6y8TRECCoID9ZOJi
+        bW3tajVk+UVmXmMHXSAbfq5yraamJtTY2HiDQl6nhiy/5DAjgDPwiC8oraWlZZ7leEAg6WpITLSCAL5/
+        JgiNAALNzc121R8bEUA/+G02m9ba2qpxuAU5sPar7tiIAHZJENwvEoDW3t4epCZ+5sJ7RQ1ZfnGouSBQ
+        WVkpWzTCN4PQoLpjI7Lg4KJ7LM45OaekWFVX7MTn3m7ui185MWN3NrzQfysu7m/OfMTTeUc/EwAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <metadata name="MainTooltip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
