Add whiteout theme

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -31,7 +31,7 @@ Version 11.0 (June 30)
    • PageNameDialog title changes depending on the mode (add/duplicate/rename page)
    • PageNameDialog text box is now automatically focused when opened
    • Add Patreon, GitHub, and website links to about box
-   **• Add themes: Desert, Storm, Sky, and Moss
+   **• Add themes: Default Light, Desert, Storm, Luna, Moss, and Whiteout 
    • Adding, removing, renaming, and changing the order of pages are all *much* faster
    • Pages are now inserted after the current page, not at the end of the notebook
    • Smaller sidebar that has been split into two tabs: pages and notebook info
